# transkit-desktop

./: .continue-here.md  .env.example  .gitignore  CHANGELOG  README.md  README_CN.md  README_KR.md  README_VI.md  com.transkit.transkit.metainfo.xml  package-lock.json  package.json  pnpm-lock.yaml  temp.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/: build.sh
.github/actions/build-for-linux/: entrypoint.sh
.github/workflows/: package.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.scripts/popclip/: Config.plist  TransKit.sh  build.sh
.scripts/snipdo/: build.sh  transkit.json
.serena/: project.yml
db/: schema.sql
docs/: dictation-service.md  local-sidecar.md  narration-spoken-translation.md  narration-windows.md  onnx-offline-engine.md  plan-auth-setup.md  soniox-audio-monitor.md  user_guide.md  user_guide_vi.md  voice-anywhere.md
edge-tts-server/: package-lock.json  package.json  server.js
scripts/local_sidecar/: asr.py  capabilities.py  download.py  llm.py  onnx_asr.py  server.py  setup.py  tts.py
src/: App.jsx  main.jsx  style.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview.arm64.json  webview.x64.json  webview.x86.json
src-tauri/icons/: icon.icns
src-tauri/icons_mac/: icon.icns
src-tauri/src/: audio_cmd.rs  auth.rs  backup.rs  cmd.rs  config.rs  edge_tts.rs  hotkey.rs  local_sidecar.rs  main.rs  onnx_engine.rs  screenshot.rs  server.rs  system_ocr.rs  tray.rs  updater.rs  voice_anywhere.rs  window.rs
src-tauri/src/audio/: linux_loopback.rs  microphone.rs  mod.rs  system_audio.rs  wasapi.rs
src-tauri/src/narration/: mod.rs  virtual_mic.rs
src/components/: SignOutButton.jsx
src/i18n/locales/: ar_AE.json  de_DE.json  en_US.json  es_ES.json  fa_IR.json  fr_FR.json  he_IL.json  it_IT.json  ja_JP.json  ko_KR.json  nb_NO.json  nn_NO.json  pt_BR.json  pt_PT.json  ru_RU.json  ta_IN.json  tk_TM.json  tr_TR.json  uk_UA.json  vi_VN.json  zh_CN.json  zh_TW.json
src/lib/: transkit-cloud.ts
src/services/ai/: _BaseConfig.jsx  _base.js  index.jsx
src/services/transcription/: async_factory.js  index.jsx
src/services/translate/: index.jsx
src/services/tts/: index.jsx
src/utils/: generateAiSuggestion.js  generateSonioxContext.js  lang_detect.js  polishTranscript.js  service_instance.ts  store.js  voiceLanguage.js
src/window/Config/: index.jsx  style.css
src/window/Monitor/: audio-scheduler.js  edge-tts-stream.js  elevenlabs-tts.js  index.jsx  soniox.js  tts.js
src/window/Recognize/: index.jsx
supabase/: CLOUD_SERVICE.md
supabase/migrations/: 001_pre_debit_model.sql  002_transkit_cloud_unified.sql  003_profile_column_security.sql  004_atomic_debit.sql  005_plan_limit_sync.sql  006_tts_ai_cloud.sql  007_subscription_plans_read_access.sql  008_profiles_plan_limits.sql  009_standardize_columns.sql
updater/: README.md  updater-for-fix-runtime.mjs  updater.mjs
(+204 files in other folders)
